# prost-mapper

./: Cargo.toml  README.md
.github/workflows/: run-tests.yml
crates/protobuf-mapper/: Cargo.toml
crates/protobuf-mapper-codegen/: Cargo.toml
crates/protobuf-mapper-codegen/src/: derive_enum.rs  derive_struct.rs  lib.rs
crates/protobuf-mapper-tests/: Cargo.toml
crates/protobuf-mapper-tests/src/: derive.rs  lib.rs
crates/protobuf-mapper/src/: convert.rs  lib.rs
src/: lib.rs  result.rs
tests/: derive.rs
