[package]
name = "protobuf-mapper"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "1.0"
chrono = "0.4.9"
serde = "1.0"
serde_json = "1.0"
prost-types = "0.11"
protobuf-mapper-codegen = { path = "./crates/protobuf-mapper-codegen" }
bigdecimal = ">=0.0.10,<0.2.0"