[package]
name = "protobuf-mapper-codegen"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Automatic conversion between Protocol Buffers generated types and your Rust types."
repository = "https://github.com/Ventmere/protobuf-mapper"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
darling = "0.10"