[package]
name = "protobuf-mapper-tests"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Automatic conversion between Protocol Buffers generated types and your Rust types."
repository = "https://github.com/Ventmere/protobuf-mapper"

[dependencies]
protobuf-mapper = { path = "../protobuf-mapper" }
prost-types = "0.11"
serde_json = "1.0"
