[package]
name = "protobuf-mapper"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Automatic conversion between Protocol Buffers generated types and your Rust types."

[dependencies]
protobuf-mapper-codegen = "0.1"

thiserror = "1.0"
chrono = "0.4.9"
serde = "1.0"
serde_json = "1.0"
prost-types = "0.11"
bigdecimal = ">=0.0.10,<0.2.0"